--- a/package.json
+++ b/package.json
@@ -9,25 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.4.19",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.1.6",
-    "@types/react": "18.2.21",
     "@types/node": "20.5.7",
+    "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "chart.js": "^4.4.0",
-    "react-chartjs-2": "^5.2.0",
     "date-fns": "^2.30.0",
-    "zustand": "^4.4.1",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
+    "next": "13.4.19",
+    "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "18.2.0",
+    "typescript": "5.1.6",
     "uuid": "^9.0.1",
-    "@types/uuid": "^9.0.4"
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
+    "@types/uuid": "^10.0.0",
+    "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
-    "tailwindcss": "3.3.3",
     "postcss": "8.4.29",
-    "autoprefixer": "10.4.15"
+    "tailwindcss": "3.3.3"
   }
 }
